# WebComposer

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  vcpkg-configuration.json  vcpkg.json
Source/: CMakeLists.txt  Main.cpp
Source/WebComposer/: CMakeLists.txt  Common.h  Feature.h  Greet.cpp  Greet.h  Platform.h
Source/WebComposer/Utils/: CMakeLists.txt  HTMLTidy.cpp  HTMLTidy.h  Releasable.cpp  Releasable.h  XMLParser.cpp  XMLParser.h
Source/WebSurfer/: CMakeLists.txt  Main.cpp
